rebuild the tree when we get the elements
Signed-off-by: David BRAQUART <david.braquart@rte-france.com>